Created a web page for each table to test the views and data validity. Redesigned aspects of the database to incorporate easier data retreival and server side input validation. Added home page with links to all other pages and vice versa. Entered place holder data to test CRUD capabilities. Deleted .pyc and migrations files

--- a/advising/templates/advisor.html
+++ b/advising/templates/advisor.html
@@ -1,12 +1,14 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Advisor Data Page</h1>
+email__first Name__Last name__title</br>----------------------</br>
 {% for obj in advisor_data %}
 
-	{{ obj.EMAIL }}
-	{{ obj.Fname }}
-	{{ obj.Lname }}
-	{{ obj.Title }}<br/>
+	{{ obj.EMAIL }}  |  
+	{{ obj.Fname }}  |
+	{{ obj.Lname }}  |
+	{{ obj.Title }}<br/><br/>
 	
 {% endfor %}
 </body>
