--- a/advising/templates/home.html
+++ b/advising/templates/home.html
@@ -1,5 +1,14 @@
 <html>
 <body>
 <h1>Home Page</h1>
+<a href="{% url 'advisor' %}"> Advisors</a></br>
+<a href="{% url 'student' %}"> students</a></br>
+<a href="{% url 'degree' %}"> degrees</a></br>
+<a href="{% url 'courses' %}"> courses</a></br>
+<a href="{% url 'departments' %}"> departments</a></br>
+<a href="{% url 'prerequisites' %}"> prereqs</a></br>
+<a href="{% url 'Takes' %}"> takes</a></br>
+<a href="{% url 'Contains' %}"> contains</a></br>
+<a href="{% url 'Chooses' %}"> chooses</a></br>
 </body>
 </html>
