--- a/advising/templates/chooses.html
+++ b/advising/templates/chooses.html
@@ -1,10 +1,12 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Chooses Data Page</h1>
+Student_____Degree </br>-----------------</br>
 {% for obj in chooses_data %}
-
-	{{ obj.PID }}
-	{{ obj.Department_Title }}<br/>
+    
+	{{ obj.PID }}  | 
+	{{ obj.DegreeTitle }}<br/>
 	
 {% endfor %}
 </body>
