--- a/advising/templates/contains.html
+++ b/advising/templates/contains.html
@@ -1,9 +1,11 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Contains Data Page</h1>
+Course | Degree </br>-----------------</br>
 {% for obj in contains_data %}
 
-	{{ obj.Course_Title }}
+	{{ obj.Course_Title }} | 
 	{{ obj.Degree_Title }}<br/>
 	
 {% endfor %}
