--- a/advising/templates/degree.html
+++ b/advising/templates/degree.html
@@ -1,11 +1,14 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Degree Data Page</h1>
+Title | About | Credits | Department 
+</br>----------------------------------</br>
 {% for obj in degree_data %}
 
-	{{ obj.TITLE }}
-	{{ obj.About }}
-	{{ obj.Required_Credits }}
+	{{ obj.TITLE }} | 
+	{{ obj.About }} | 
+	{{ obj.Required_Credits }} | 
 	{{ obj.Deparment_Name }}<br/>
 	
 {% endfor %}
