--- a/advising/templates/department.html
+++ b/advising/templates/department.html
@@ -1,11 +1,13 @@
-<html>
+<html> 
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Department Data Page</h1>
-{% for obj in department_data %}
+Name | Number | Buidling</br>-----------------------------</br>
+{% for obj in Department_data %}
 
-	{{ obj.Name }}
-	{{ obj.DEPT_NUM }}
-	{{ obj.Building }}<br/>
+	{{ obj.Name }}  |  
+	{{ obj.DEPT_NUM }} | 
+	{{ obj.Building }}<br/><br/>
 	
 {% endfor %}
 </body>
