--- a/advising/templates/prerequisites.html
+++ b/advising/templates/prerequisites.html
@@ -1,9 +1,11 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Prerequisites Data Page</h1>
+Title | Course </br>-------------------</br>
 {% for obj in prereq_data %}
 
-	{{ obj.TITLE }}
+	{{ obj.TITLE }} | 
 	{{ obj.Course }}<br/>
 	
 {% endfor %}
