--- a/advising/templates/takes.html
+++ b/advising/templates/takes.html
@@ -1,11 +1,14 @@
 <html>
 <body>
+<a href="{% url 'home' %}"> home</a></br>
 <h1>Takes Data Page</h1>
+PID | Course Title | Grade | Enrolled?
+</br>------------------------------------------</br>
 {% for obj in takes_data %}
 
-	{{ obj.PID }}
-	{{ obj.Course_Title }}
-	{{ obj.Grade_Received }}
+	{{ obj.PID }} | 
+	{{ obj.Course_Title }} | 
+	{{ obj.Grade_Received }} | 
 	{{ obj.Enrolled }}<br/>
 	
 {% endfor %}
