adding a few tweaks

--- a/templates/degree.html
+++ b/templates/degree.html
@@ -21,7 +21,7 @@
 	color: #333
 }
 {% endblock %}
-</style>
+</style> 
 <div class="jumbotron">
 <div class="container">
 <html>
@@ -36,8 +36,8 @@
 {% for obj in degree_data %}
 
 	<h3>{{ obj.TITLE }}</h3>
-	<h4><li>Credit Hours: {{ obj.Required_Credits }}</li> </h4>
-	<h4><li>Department: {{ obj.Deparment_name }}</li> </h4>
+	<h4><li>Credit Hours: {{ obj.Requiured_Credits }}</li> </h4>
+	<h4><li>Department: {{ obj.Deparment_Name }}</li> </h4>
 	<h4><li>Description: 
 		<p>{{ obj.About }}</p>
 	</li></h4></br>
